# bug-flow

./: .gitignore  README.md  docker-compose.dev.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml  requirements.txt
backend/alembic/: script.py.mako
backend/app/core/: database.py
backend/app/models/: attachment.py  comment.py  issue.py  notification.py  project.py  user.py
backend/app/schemas/: __init__.py  attachment.py  base.py  comment.py  issue.py  notification.py  project.py  search.py  user.py
backend/requirements/: base.txt  dev.txt  prod.txt
scripts/: init-db.sh
traefik/: docker-compose.traefik.yml
